Finished All BTN vids
All buttons in index have a draft video for them. Completing the look

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<p>Focused on crafting efficient, clean code and solving complex challenges to bring immersive gameplay experiences to life.</p>
 							</header>
 							<section class="tiles">
-								<article>
+								<article class="style1">
 									<span class="image">
 										<video autoplay loop muted playsinline>
 											<source src="videos/ProgramTrailer.mp4" type="video/mp4">
@@ -69,9 +69,12 @@
 										</div>
 									</a>
 								</article>
-								<article class="style2">
+								<article class="style1">
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<video autoplay loop muted playsinline>
+											<source src="videos/Neuron.mp4" type="video/mp4">
+											Your browser does not support the video tag.
+										</video>
 									</span>
 									<a href="generic.html">
 										<h2>About Me</h2>
@@ -80,9 +83,12 @@
 										</div>
 									</a>
 								</article>
-								<article class="style3">
+								<article class="style1">
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<video autoplay loop muted playsinline>
+											<source src="videos/Education.mp4" type="video/mp4">
+											Your browser does not support the video tag.
+										</video>
 									</span>
 									<a href="generic.html">
 										<h2>Education</h2>
@@ -91,9 +97,12 @@
 										</div>
 									</a>
 								</article>
-								<article class="style4">
+								<article class="style1">
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<video autoplay loop muted playsinline>
+											<source src="videos/ResuméOption2.mp4" type="video/mp4">
+											Your browser does not support the video tag.
+										</video>
 									</span>
 									<a href="generic.html">
 										<h2>Resumé</h2>
@@ -102,9 +111,12 @@
 										</div>
 									</a>
 								</article>
-								<article class="style5">
+								<article class="style1">
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<video autoplay loop muted playsinline>
+											<source src="videos/3DArt.mp4" type="video/mp4">
+											Your browser does not support the video tag.
+										</video>
 									</span>
 									<a href="generic.html">
 										<h2>3D Art</h2>
@@ -113,12 +125,15 @@
 										</div>
 									</a>
 								</article>
-								<article class="style6">
+								<article class="style1">
 									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
+										<video autoplay loop muted playsinline>
+											<source src="videos/Inspire.mp4" type="video/mp4">
+											Your browser does not support the video tag.
+										</video>
 									</span>
 									<a href="generic.html">
-										<h2>Gaming</h2>
+										<h2>Games that Inpsire Me</h2>
 										<div class="content">
 											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
 										</div>
