Added descriptions to the buttons
All description for the buttons are in place

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<div class="inner">
 							<header>
 								<h1>Game Programmer with a Passion for Innovative Gameplay.</h1>
-								<p>Focused on crafting efficient, clean code and solving complex challenges to bring immersive gameplay experiences to life.</p>
+								<p>Focused on crafting efficient, clean code and solving complex challenges to bring immersive gameplay experiences to life</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -65,7 +65,7 @@
 									<a href="Programming.html">
 										<h2>Programming Projects</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Explore my coding portfolio, featuring games, applications, and technical experiments</p>
 										</div>
 									</a>
 								</article>
@@ -79,7 +79,7 @@
 									<a href="generic.html">
 										<h2>About Me</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>A little about who I am, my interests, and my journey in programming and game development</p>
 										</div>
 									</a>
 								</article>
@@ -93,7 +93,7 @@
 									<a href="generic.html">
 										<h2>Education</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>My academic background, courses, and certifications related to programming & game development</p>
 										</div>
 									</a>
 								</article>
@@ -107,7 +107,7 @@
 									<a href="generic.html">
 										<h2>Resumé</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>View my skills and qualifications in one place</p>
 										</div>
 									</a>
 								</article>
@@ -121,7 +121,7 @@
 									<a href="generic.html">
 										<h2>3D Art</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>A collection of 3D work that I've done for fun as a way to learn about 3D art</p>
 										</div>
 									</a>
 								</article>
@@ -135,7 +135,7 @@
 									<a href="generic.html">
 										<h2>Games that Inpsire Me</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Games that inspire me, my experiences, and how they influence my development approach</p>
 										</div>
 									</a>
 								</article>
