--- a/ProgrammingProjects.html
+++ b/ProgrammingProjects.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Portfolio of Lewis Mitchell</title>
+		<title>Programming Projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -40,7 +40,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="ProgrammingProjects.html">Projects</a></li>
+							<li><a href="generic.html">Ipsum veroeros</a></li>
 							<li><a href="generic.html">Tempus etiam</a></li>
 							<li><a href="generic.html">Consequat dolor</a></li>
 							<li><a href="elements.html">Elements</a></li>
@@ -51,91 +51,73 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Game Programmer with a Passion for Innovative Gameplay.</h1>
-								<p>Focused on crafting efficient, clean code and solving complex challenges to bring immersive gameplay experiences to life</p>
+								<h1>Projects</h1>
+								<p>Projects that I've worked on</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
-										<video autoplay loop muted playsinline>
-											<source src="videos/ProgramTrailer.mp4" type="video/mp4">
-											Your browser does not support the video tag.
-										</video>
+										<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 									</span>
-									<a href="ProgrammingProjects.html">
-										<h2>Programming Projects</h2>
+									<a href="Programming.html">
+										<h2>Abyssal Dread</h2>
 										<div class="content">
-											<p>Explore my coding portfolio, featuring games, applications, and technical experiments</p>
+											<p>Escape the nightmare you woke up to using the ancient weaponry of another world and hack and slash your way through the gritty, dark, dungeons of an Eldritch prison, filled with otherworldly horrors before you succumb to the vile magic of your jailors</p>
 										</div>
 									</a>
 								</article>
 								<article class="style1">
 									<span class="image">
-										<video autoplay loop muted playsinline>
-											<source src="videos/Neuron.mp4" type="video/mp4">
-											Your browser does not support the video tag.
-										</video>
+										<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 									</span>
-									<a href="generic.html">
-										<h2>About Me</h2>
+									<a href="Programming.html">
+										<h2>Bitter Extinction</h2>
 										<div class="content">
-											<p>A little about who I am, my interests, and my journey in programming and game development</p>
+											<p>A tower defence shooter, with a dieselpunk aesthetic. You are commissioned with fortifying an abandoned mining colony. The catch is this glacial planet is home to metal devouring creatures, evolving as they feast on your defences. Extinction is the only way</p>
 										</div>
 									</a>
 								</article>
 								<article class="style1">
 									<span class="image">
-										<video autoplay loop muted playsinline>
-											<source src="videos/Education.mp4" type="video/mp4">
-											Your browser does not support the video tag.
-										</video>
+										<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 									</span>
-									<a href="generic.html">
-										<h2>Education</h2>
+									<a href="Programming.html">
+										<h2>Conjoined</h2>
 										<div class="content">
-											<p>My academic background, courses, and certifications related to programming & game development</p>
+											<p>A combat adventure game filled with challenging puzzles. You must gather a key from a gigantic killer robot called a hattertron; programmed by Odious Keith. Destroying it will drop a key allowing you to enter Odious Keith's castle</p>
 										</div>
 									</a>
 								</article>
 								<article class="style1">
 									<span class="image">
-										<video autoplay loop muted playsinline>
-											<source src="videos/ResuméOption2.mp4" type="video/mp4">
-											Your browser does not support the video tag.
-										</video>
+										<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 									</span>
-									<a href="generic.html">
-										<h2>Resumé</h2>
+									<a href="Programming.html">
+										<h2>Ripple Defence</h2>
 										<div class="content">
-											<p>View my skills and qualifications in one place</p>
+											<p>A calm game where the objective is to defend your Lilypad from incoming rocks/debris. There are too many rocks to defend from but thankfully the pond seems to generate strange power-ups which can aid you in your survival</p>
 										</div>
 									</a>
 								</article>
 								<article class="style1">
 									<span class="image">
-										<video autoplay loop muted playsinline>
-											<source src="videos/3DArt.mp4" type="video/mp4">
-											Your browser does not support the video tag.
-										</video>
+										<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 									</span>
-									<a href="generic.html">
-										<h2>3D Art</h2>
+									<a href="Programming.html">
+										<h2>Cup Catch</h2>
 										<div class="content">
-											<p>A collection of 3D work that I've done for fun as a way to learn about 3D art</p>
+											<p>Spin the cup to catch incoming coloured balls to earn points. Get as many points as you can get before losing all your health</p>
 										</div>
 									</a>
 								</article>
 								<article class="style1">
 									<span class="image">
-										<video autoplay loop muted playsinline>
-											<source src="videos/Inspire.mp4" type="video/mp4">
-											Your browser does not support the video tag.
-										</video>
+										<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 									</span>
-									<a href="generic.html">
-										<h2>Games that Inpsire Me</h2>
+									<a href="Programming.html">
+										<h2>Loot Generation Systems</h2>
 										<div class="content">
-											<p>Games that inspire me, my experiences, and how they influence my development approach</p>
+											<p>Some loot generation systems that I have worked on in my freetime</p>
 										</div>
 									</a>
 								</article>
