Create majority of pages
The majority of pages have been created. Also, new portrait picture has been added

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Lewis J Mitchell</span>
+									<span class="symbol"><img src="images/Portrait.png" alt="" /></span><span class="title">Lewis J Mitchell</span>
 								</a>
 
 							<!-- Nav -->
@@ -76,7 +76,7 @@
 											Your browser does not support the video tag.
 										</video>
 									</span>
-									<a href="generic.html">
+									<a href="AboutMe.html">
 										<h2>About Me</h2>
 										<div class="content">
 											<p>A little about who I am, my interests, and my journey in programming and game development</p>
@@ -90,7 +90,7 @@
 											Your browser does not support the video tag.
 										</video>
 									</span>
-									<a href="generic.html">
+									<a href="Education.html">
 										<h2>Education</h2>
 										<div class="content">
 											<p>My academic background, courses, and certifications related to programming & game development</p>
@@ -104,7 +104,7 @@
 											Your browser does not support the video tag.
 										</video>
 									</span>
-									<a href="generic.html">
+									<a href="Resumé.html">
 										<h2>Resumé</h2>
 										<div class="content">
 											<p>View my skills and qualifications in one place</p>
@@ -118,7 +118,7 @@
 											Your browser does not support the video tag.
 										</video>
 									</span>
-									<a href="generic.html">
+									<a href="3DArt.html">
 										<h2>3D Art</h2>
 										<div class="content">
 											<p>A collection of 3D work that I've done for fun as a way to learn about 3D art</p>
@@ -132,7 +132,7 @@
 											Your browser does not support the video tag.
 										</video>
 									</span>
-									<a href="generic.html">
+									<a href="GamesThatInspireMe.html">
 										<h2>Games that Inpsire Me</h2>
 										<div class="content">
 											<p>Games that inspire me, my experiences, and how they influence my development approach</p>
