--- a/ProgrammingProjects.html
+++ b/ProgrammingProjects.html
@@ -21,16 +21,16 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Lewis J Mitchell</span>
-								</a>
+							<a href="index.html" class="logo">
+								<span class="symbol"><img src="images/Portrait.png" alt="" /></span><span class="title">Lewis J Mitchell</span>
+							</a>
 
 							<!-- Nav -->
-								<nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav>
+							<nav>
+								<ul>
+									<li><a href="#menu">Menu</a></li>
+								</ul>
+							</nav>
 
 						</div>
 					</header>
@@ -59,7 +59,7 @@
 									<span class="image">
 										<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 									</span>
-									<a href="Programming.html">
+									<a href="AbyssalDread.html">
 										<h2>Abyssal Dread</h2>
 										<div class="content">
 											<p>Escape the nightmare you woke up to using the ancient weaponry of another world and hack and slash your way through the gritty, dark, dungeons of an Eldritch prison, filled with otherworldly horrors before you succumb to the vile magic of your jailors</p>
@@ -70,7 +70,7 @@
 									<span class="image">
 										<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 									</span>
-									<a href="Programming.html">
+									<a href="generic.html">
 										<h2>Bitter Extinction</h2>
 										<div class="content">
 											<p>A tower defence shooter, with a dieselpunk aesthetic. You are commissioned with fortifying an abandoned mining colony. The catch is this glacial planet is home to metal devouring creatures, evolving as they feast on your defences. Extinction is the only way</p>
@@ -81,7 +81,7 @@
 									<span class="image">
 										<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 									</span>
-									<a href="Programming.html">
+									<a href="generic.html">
 										<h2>Conjoined</h2>
 										<div class="content">
 											<p>A combat adventure game filled with challenging puzzles. You must gather a key from a gigantic killer robot called a hattertron; programmed by Odious Keith. Destroying it will drop a key allowing you to enter Odious Keith's castle</p>
@@ -92,7 +92,7 @@
 									<span class="image">
 										<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 									</span>
-									<a href="Programming.html">
+									<a href="generic.html">
 										<h2>Ripple Defence</h2>
 										<div class="content">
 											<p>A calm game where the objective is to defend your Lilypad from incoming rocks/debris. There are too many rocks to defend from but thankfully the pond seems to generate strange power-ups which can aid you in your survival</p>
@@ -103,7 +103,7 @@
 									<span class="image">
 										<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 									</span>
-									<a href="Programming.html">
+									<a href="generic.html">
 										<h2>Cup Catch</h2>
 										<div class="content">
 											<p>Spin the cup to catch incoming coloured balls to earn points. Get as many points as you can get before losing all your health</p>
@@ -114,7 +114,7 @@
 									<span class="image">
 										<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 									</span>
-									<a href="Programming.html">
+									<a href="generic.html">
 										<h2>Loot Generation Systems</h2>
 										<div class="content">
 											<p>Some loot generation systems that I have worked on in my freetime</p>
