Abyssal Dread About added
Started the description of the Abyssal Dread Project

--- a/AbyssalDread.html
+++ b/AbyssalDread.html
@@ -60,7 +60,7 @@
 							<div class="project-container">
 								<div class="left-container">
 									<h2>About</h2>
-									<p>This project is about...</p>
+									<p>​Abyssal Dread began as a third-year university project and was submitted for the Games Academy Expo 2023. After the initial submission, the development team continued to enhance the game by incorporating additional features and refining gameplay elements. This dedication led to the game receiving the People's Choice Award and the Most Cohesive Art Style Award at the expo.</p>
 								</div>
 								<div class="right-container">
 									<h2>Project Info</h2>
