--- a/AbyssalDread.html
+++ b/AbyssalDread.html
@@ -60,16 +60,25 @@
 							<div class="project-container">
 								<div class="left-container">
 									<h2>About</h2>
-									<p>​Abyssal Dread began as a third-year university project and was submitted for the Games Academy Expo 2023. After the initial submission, the development team continued to enhance the game by incorporating additional features and refining gameplay elements. This dedication led to the game receiving the People's Choice Award and the Most Cohesive Art Style Award at the expo.</p>
+									<p>​Abyssal Dread began as a third-year university project and was submitted for the Games Academy Expo 2023. After the initial submission, we continued to enhance the game by incorporating additional features and refining gameplay elements. This dedication led to the game receiving the People's Choice Award and the Most Cohesive Art Style Award at the expo.</p>
 								</div>
 								<div class="right-container">
 									<h2>Project Info</h2>
-									<p>Details about the project...</p> 
+									<p>Details about the project...</p>
 								</div>
 							</div>
-							<h2>About the Project</h2>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<h2>Pictures</h2>
+							<h2>Enemy AI</h2>
+							<p>Details about the system...</p>
+							<h2>Enemy Dismemberment System</h2>
+							<p>Details about the system...</p>
+							<h2>Developer Room </h2>
+							<p>Details about the system...</p>
+							<h2>Audio Scripting</h2>
+							<p>Details about the system...</p>
+							<h2>Level Transition</h2>
+							<p>Details about the system...</p>
+							<h2>Crystal Boss</h2>
+							<p>Details about the system...</p>
 						</div>
 					</div>
 
