Changed abyssal dread's description

--- a/ProgrammingProjects.html
+++ b/ProgrammingProjects.html
@@ -62,7 +62,7 @@
 									<a href="AbyssalDread.html">
 										<h2>Abyssal Dread</h2>
 										<div class="content">
-											<p>Escape the nightmare you woke up to using the ancient weaponry of another world and hack and slash your way through the gritty, dark, dungeons of an Eldritch prison, filled with otherworldly horrors before you succumb to the vile magic of your jailors</p>
+											<p>Escape the nightmare you woke up to using the ancient weaponry of another world and hack and slash your way through the gritty, dark, dungeons of a prison, filled with otherworldly enemies</p>
 										</div>
 									</a>
 								</article>
