Added Text Dropdown
Text dropdown added for extra details. Also added a loading video as a temporary placeholder video

--- a/AbyssalDread.html
+++ b/AbyssalDread.html
@@ -69,40 +69,108 @@
 							</div>
 							<h2>Test Room</h2>
 							<p>This room was built to help the team develop, test and bug fix mechanics. In this room you could become invincible, teleport, spawn and clear any enemy type. There was also the ability to fly around.</p>
-							
-							<details class="dropdown">
+
+							<details class="video-dropdown">
 								<summary>Show Video "Yeeter Testing" ▼</summary>
 								<video autoplay loop muted playsinline>
 									<source src="videos/AbyssalDread/YeeterTentacle1080.mp4" type="video/mp4">
 								</video>
 							</details>
 
-							<details class="dropdown">
+							<details class="video-dropdown">
 								<summary>Show Video "Crab Spider Testing" ▼</summary>
 								<video autoplay loop muted playsinline>
 									<source src="videos/AbyssalDread/CrabSpiderSounds1080.mp4" type="video/mp4">
 								</video>
 							</details>
 
-							<details class="dropdown">
+							<details class="video-dropdown">
 								<summary>Show Video "Crab Boss Testing" ▼</summary>
 								<video autoplay loop muted playsinline>
 									<source src="videos/AbyssalDread/BossSpawnEffect1080.mp4" type="video/mp4">
 								</video>
 							</details>
 
+							<details class="text-dropdown">
+								<summary>Show Extra Details ▼</summary>
+								<p> Extra details...</p>
+							</details>
+
 							<h2>Enemy AI</h2>
 							<p>Details about the system...</p>
+
+							<details class="video-dropdown">
+								<summary>Show Video ▼</summary>
+								<video autoplay loop muted playsinline>
+									<source src="videos/EmptyVideo.mp4" type="video/mp4">
+								</video>
+							</details>
+
+							<details class="text-dropdown">
+								<summary>Show Extra Details ▼</summary>
+								<p> Extra details...</p>
+							</details>
+
 							<h2>Enemy Dismemberment System</h2>
 							<p>Details about the system...</p>
-							<h2>Developer Room </h2>
-							<p>Details about the system...</p>
+
+							<details class="video-dropdown">
+								<summary>Show Video ▼</summary>
+								<video autoplay loop muted playsinline>
+									<source src="videos/EmptyVideo.mp4" type="video/mp4">
+								</video>
+							</details>
+
+							<details class="text-dropdown">
+								<summary>Show Extra Details ▼</summary>
+								<p> Extra details...</p>
+							</details>
+
 							<h2>Audio Scripting</h2>
 							<p>Details about the system...</p>
+
+							<details class="video-dropdown">
+								<summary>Show Video ▼</summary>
+								<video autoplay loop muted playsinline>
+									<source src="videos/EmptyVideo.mp4" type="video/mp4">
+								</video>
+							</details>
+
+							<details class="text-dropdown">
+								<summary>Show Extra Details ▼</summary>
+								<p> Extra details...</p>
+							</details>
+
 							<h2>Level Transition</h2>
 							<p>Details about the system...</p>
+
+							<details class="video-dropdown">
+								<summary>Show Video ▼</summary>
+								<video autoplay loop muted playsinline>
+									<source src="videos/EmptyVideo.mp4" type="video/mp4">
+								</video>
+							</details>
+
+							<details class="text-dropdown">
+								<summary>Show Extra Details ▼</summary>
+								<p> Extra details...</p>
+							</details>
+
 							<h2>Crystal Boss</h2>
 							<p>Details about the system...</p>
+
+							<details class="video-dropdown">
+								<summary>Show Video ▼</summary>
+								<video autoplay loop muted playsinline>
+									<source src="videos/EmptyVideo.mp4" type="video/mp4">
+								</video>
+							</details>
+
+							<details class="text-dropdown">
+								<summary>Show Extra Details ▼</summary>
+								<p> Extra details...</p>
+							</details>
+
 						</div>
 					</div>
 
