Further details added to abyssal dread
Project info now mentions engine, team size, role, development time and project type

--- a/AbyssalDread.html
+++ b/AbyssalDread.html
@@ -64,7 +64,29 @@
 								</div>
 								<div class="right-container">
 									<h2>Project Info</h2>
-									<p>Details about the project...</p>
+
+									<div class="project-info">
+										<div class="info-item">
+											<i class="fas fa-cogs"></i>
+											<span>Engine: Unreal Engine 5</span>
+										</div>
+										<div class="info-item">
+											<i class="fas fa-users"></i>
+											<span>Team Size: 7</span>
+										</div>
+										<div class="info-item">
+											<i class="fas fa-user"></i>
+											<span>Role: Gameplay Programmer</span>
+										</div>
+										<div class="info-item">
+											<i class="fas fa-clock"></i>
+											<span>Development Time: 8 Months</span>
+										</div>
+										<div class="info-item">
+											<i class="fas fa-project-diagram"></i>
+											<span>Project Type: Year 3 University</span>
+										</div>
+									</div>
 								</div>
 							</div>
 							<h2>Test Room</h2>
@@ -97,7 +119,7 @@
 							</details>
 
 							<h2>Enemy AI</h2>
-							<p>Details about the system...</p>
+							<p>I developed enemy AI using Unreal Engine’s Behavior Tree system, gaining hands-on experience with it for the first time.</p>
 
 							<details class="video-dropdown">
 								<summary>Show Video ▼</summary>
@@ -108,11 +130,11 @@
 
 							<details class="text-dropdown">
 								<summary>Show Extra Details ▼</summary>
-								<p> Extra details...</p>
+								<p>I developed three distinct enemy behavior types: close-range attackers (Thralls and Tanks), ranged evaders (Yeeters), and aggressive chargers/jumpers (Skullcrabs and Dogs).</p>
 							</details>
 
 							<h2>Enemy Dismemberment System</h2>
-							<p>Details about the system...</p>
+							<p>I implemented a straightforward dismemberment system that assigned individual health values to each enemy limb. When an enemy was hit, damage was applied to a random limb, and if its health reached zero, the limb would be removed and replaced with a corresponding dismembered version at the same location.</p>
 
 							<details class="video-dropdown">
 								<summary>Show Video ▼</summary>
@@ -123,11 +145,11 @@
 
 							<details class="text-dropdown">
 								<summary>Show Extra Details ▼</summary>
-								<p> Extra details...</p>
+								<p> Further details... </p>
 							</details>
 
 							<h2>Audio Scripting</h2>
-							<p>Details about the system...</p>
+							<p>I developed the audio scripting using Unreal Engine’s audio systems, creating a dynamic system that seamlessly transitions between combat and ambient music based on gameplay context. Additionally, I implemented the trigger system for weapon voice lines to enhance immersion and player feedback.</p>
 
 							<details class="video-dropdown">
 								<summary>Show Video ▼</summary>
