--- a/ProgrammingProjects.html
+++ b/ProgrammingProjects.html
@@ -70,7 +70,7 @@
 									<span class="image">
 										<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 									</span>
-									<a href="generic.html">
+									<a href="BitterExtinction.html">
 										<h2>Bitter Extinction</h2>
 										<div class="content">
 											<p>A tower defence shooter, with a dieselpunk aesthetic. You are commissioned with fortifying an abandoned mining colony. The catch is this glacial planet is home to metal devouring creatures, evolving as they feast on your defences. Extinction is the only way</p>
@@ -81,7 +81,7 @@
 									<span class="image">
 										<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 									</span>
-									<a href="generic.html">
+									<a href="Conjoined.html">
 										<h2>Conjoined</h2>
 										<div class="content">
 											<p>A combat adventure game filled with challenging puzzles. You must gather a key from a gigantic killer robot called a hattertron; programmed by Odious Keith. Destroying it will drop a key allowing you to enter Odious Keith's castle</p>
@@ -92,7 +92,7 @@
 									<span class="image">
 										<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
 									</span>
-									<a href="generic.html">
+									<a href="RippleDefence.html">
 										<h2>Ripple Defence</h2>
 										<div class="content">
 											<p>A calm game where the objective is to defend your Lilypad from incoming rocks/debris. There are too many rocks to defend from but thankfully the pond seems to generate strange power-ups which can aid you in your survival</p>
