New videos added for crystal boss and main menu

--- a/AbyssalDread.html
+++ b/AbyssalDread.html
@@ -118,8 +118,18 @@
 								<p> Extra details...</p>
 							</details>
 
+							<h2>Main Menu</h2>
+							<p>I worked with an artist to develop the look & functionality of the main menu.</p>
+
+							<details class="video-dropdown">
+								<summary>Show Video "Main Menu" ▼</summary>
+								<video autoplay loop muted playsinline>
+									<source src="videos/AbyssalDread/HomeScreen1080.mp4" type="video/mp4">
+								</video>
+							</details>
+
 							<h2>Enemy AI</h2>
-							<p>I developed enemy AI using Unreal Engine’s Behavior Tree system, gaining hands-on experience with it for the first time.</p>
+							<p>I developed enemy AI using Unreal Engine’s Behaviour Tree system, gaining hands-on experience with it for the first time.</p>
 
 							<details class="video-dropdown">
 								<summary>Show Video ▼</summary>
@@ -130,7 +140,7 @@
 
 							<details class="text-dropdown">
 								<summary>Show Extra Details ▼</summary>
-								<p>I developed three distinct enemy behavior types: close-range attackers (Thralls and Tanks), ranged evaders (Yeeters), and aggressive chargers/jumpers (Skullcrabs and Dogs).</p>
+								<p>I developed three distinct enemy behaviour types: close-range attackers (Thralls and Tanks), ranged evaders (Yeeters), and aggressive chargers/jumpers (Skullcrabs and Dogs).</p>
 							</details>
 
 							<h2>Enemy Dismemberment System</h2>
@@ -179,12 +189,26 @@
 							</details>
 
 							<h2>Crystal Boss</h2>
-							<p>Details about the system...</p>
+							<p>In the final stage of the game, there was a scrystal boss which I ahd worked on. This required the players to charge up the crystal by staying within the set area until the crystal subermeged intself into the ground. </p>
 
 							<details class="video-dropdown">
-								<summary>Show Video ▼</summary>
+								<summary>Show Video "Crystal Begin Charging" ▼</summary>
 								<video autoplay loop muted playsinline>
-									<source src="videos/EmptyVideo.mp4" type="video/mp4">
+									<source src="videos/AbyssalDread/BeginCharging1080.mp4" type="video/mp4">
+								</video>
+							</details>
+
+							<details class="video-dropdown">
+								<summary>Show Video "Difficulty Increase" ▼</summary>
+								<video autoplay loop muted playsinline>
+									<source src="videos/AbyssalDread/HalfwayMadness1080.mp4" type="video/mp4">
+								</video>
+							</details>
+
+							<details class="video-dropdown">
+								<summary>Show Video "Crystal Boss Fight Ending" ▼</summary>
+								<video autoplay loop muted playsinline>
+									<source src="videos/AbyssalDread/CrystalEnd1080.mp4" type="video/mp4">
 								</video>
 							</details>
 
