--- a/AbyssalDread.html
+++ b/AbyssalDread.html
@@ -89,174 +89,239 @@
 									</div>
 								</div>
 							</div>
-							<h2>Test Room</h2>
-							<p>This room was built to help the team develop, test and bug fix mechanics. In this room you could become invincible, teleport, spawn and clear any enemy type. There was also the ability to fly around.</p>
 
-							<details class="video-dropdown">
-								<summary>Show Video "Yeeter Testing" ▼</summary>
-								<video autoplay loop muted playsinline>
-									<source src="videos/AbyssalDread/YeeterTentacle1080.mp4" type="video/mp4">
-								</video>
-							</details>
+							<div class="mainInfo">
+								<h2>Test Room</h2>
+								<p>This room was built to help the team develop, test and bug fix mechanics. In this room you could become invincible, teleport, spawn and clear any enemy type. There was also the ability to fly around.</p>
 
-							<details class="video-dropdown">
-								<summary>Show Video "Crab Spider Testing" ▼</summary>
-								<video autoplay loop muted playsinline>
-									<source src="videos/AbyssalDread/CrabSpiderSounds1080.mp4" type="video/mp4">
-								</video>
-							</details>
+								<details class="video-dropdown">
+									<summary>Show Video "Yeeter Testing" ▼</summary>
+									<video autoplay loop muted playsinline>
+										<source src="videos/AbyssalDread/YeeterTentacle1080.mp4" type="video/mp4">
+									</video>
+								</details>
 
-							<details class="video-dropdown">
-								<summary>Show Video "Crab Boss Testing" ▼</summary>
-								<video autoplay loop muted playsinline>
-									<source src="videos/AbyssalDread/BossSpawnEffect1080.mp4" type="video/mp4">
-								</video>
-							</details>
+								<details class="video-dropdown">
+									<summary>Show Video "Crab Spider Testing" ▼</summary>
+									<video autoplay loop muted playsinline>
+										<source src="videos/AbyssalDread/CrabSpiderSounds1080.mp4" type="video/mp4">
+									</video>
+								</details>
 
-							<details class="text-dropdown">
-								<summary>Show Extra Details ▼</summary>
-								<p> Extra details...</p>
-							</details>
+								<details class="video-dropdown">
+									<summary>Show Video "Crab Boss Testing" ▼</summary>
+									<video autoplay loop muted playsinline>
+										<source src="videos/AbyssalDread/BossSpawnEffect1080.mp4" type="video/mp4">
+									</video>
+								</details>
 
-							<h2>Main Menu</h2>
-							<p>I worked with an artist to develop the look & functionality of the main menu.</p>
+								<details class="text-dropdown">
+									<summary>Show Extra Details ▼</summary>
+									<p> Extra details...</p>
+								</details>
+							</div>
 
-							<details class="video-dropdown">
-								<summary>Show Video "Main Menu" ▼</summary>
-								<video autoplay loop muted playsinline>
-									<source src="videos/AbyssalDread/HomeScreen1080.mp4" type="video/mp4">
-								</video>
-							</details>
+							<div class="mainInfo">
+								<h2>Main Menu</h2>
+								<p>I worked with an artist to develop the look & functionality of the main menu.</p>
 
-							<h2>Enemy AI</h2>
-							<p>I developed enemy AI using Unreal Engine’s Behaviour Tree system, gaining hands-on experience with it for the first time.</p>
+								<details class="video-dropdown">
+									<summary>Show Video "Main Menu" ▼</summary>
+									<video autoplay loop muted playsinline>
+										<source src="videos/AbyssalDread/HomeScreen1080.mp4" type="video/mp4">
+									</video>
+								</details>
 
-							<details class="video-dropdown">
-								<summary>Show Video ▼</summary>
-								<video autoplay loop muted playsinline>
-									<source src="videos/EmptyVideo.mp4" type="video/mp4">
-								</video>
-							</details>
+								<details class="text-dropdown">
+									<summary>Show Extra Details ▼</summary>
+									<p> Extra details...</p>
+								</details>
+							</div>
 
-							<details class="text-dropdown">
-								<summary>Show Extra Details ▼</summary>
-								<p>I developed three distinct enemy behaviour types: close-range attackers (Thralls and Tanks), ranged evaders (Yeeters), and aggressive chargers/jumpers (Skullcrabs and Dogs).</p>
-							</details>
+							<div class="mainInfo">
+								<h2>Crystal Boss</h2>
+								<p>In the final stage of the game, there was a scrystal boss which I ahd worked on. This required the players to charge up the crystal by staying within the set area until the crystal subermeged intself into the ground. </p>
 
-							<h2>Enemy Dismemberment System</h2>
-							<p>I implemented a straightforward dismemberment system that assigned individual health values to each enemy limb. When an enemy was hit, damage was applied to a random limb, and if its health reached zero, the limb would be removed and replaced with a corresponding dismembered version at the same location.</p>
+								<details class="video-dropdown">
+									<summary>Show Video "Crystal Begin Charging" ▼</summary>
+									<video autoplay loop muted playsinline>
+										<source src="videos/AbyssalDread/BeginCharging1080.mp4" type="video/mp4">
+									</video>
+								</details>
 
-							<details class="video-dropdown">
-								<summary>Show Video ▼</summary>
-								<video autoplay loop muted playsinline>
-									<source src="videos/EmptyVideo.mp4" type="video/mp4">
-								</video>
-							</details>
+								<details class="video-dropdown">
+									<summary>Show Video "Difficulty Increase" ▼</summary>
+									<video autoplay loop muted playsinline>
+										<source src="videos/AbyssalDread/HalfwayMadness1080.mp4" type="video/mp4">
+									</video>
+								</details>
 
-							<details class="text-dropdown">
-								<summary>Show Extra Details ▼</summary>
-								<p> Further details... </p>
-							</details>
+								<details class="video-dropdown">
+									<summary>Show Video "Crystal Boss Fight Ending" ▼</summary>
+									<video autoplay loop muted playsinline>
+										<source src="videos/AbyssalDread/CrystalEnd1080.mp4" type="video/mp4">
+									</video>
+								</details>
 
-							<h2>Audio Scripting</h2>
-							<p>I developed the audio scripting using Unreal Engine’s audio systems, creating a dynamic system that seamlessly transitions between combat and ambient music based on gameplay context. Additionally, I implemented the trigger system for weapon voice lines to enhance immersion and player feedback.</p>
+								<details class="text-dropdown">
+									<summary>Show Extra Details ▼</summary>
+									<p> Extra details...</p>
+								</details>
+							</div>
 
-							<details class="video-dropdown">
-								<summary>Show Video ▼</summary>
-								<video autoplay loop muted playsinline>
-									<source src="videos/EmptyVideo.mp4" type="video/mp4">
-								</video>
-							</details>
+							<div class="mainInfo">
+								<h2>Tutorial Prompts</h2>
+								<p>I developed the tutorial prompt system and the videos for the tutorial level.</p>
 
-							<details class="text-dropdown">
-								<summary>Show Extra Details ▼</summary>
-								<p> Extra details...</p>
-							</details>
+								<details class="video-dropdown">
+									<summary>Show Video "1st Tutorial Prompts" ▼</summary>
+									<video autoplay loop muted playsinline>
+										<source src="videos/AbyssalDread/TutorialPromptsPOne1080.mp4" type="video/mp4">
+									</video>
+								</details>
+								<details class="video-dropdown">
+									<summary>Show Video "2nd Tutorial Prompts" ▼</summary>
+									<video autoplay loop muted playsinline>
+										<source src="videos/AbyssalDread/TutorialPromptsPTwo1080.mp4" type="video/mp4">
+									</video>
+								</details>
+								<details class="video-dropdown">
+									<summary>Show Video "3rd Tutorial Prompts" ▼</summary>
+									<video autoplay loop muted playsinline>
+										<source src="videos/AbyssalDread/TutorialPromptsPThree1080.mp4" type="video/mp4">
+									</video>
+								</details>
 
-							<h2>Level Transition</h2>
-							<p>Details about the system...</p>
+								<details class="text-dropdown">
+									<summary>Show Extra Details ▼</summary>
+									<p> Extra details...</p>
+								</details>
+							</div>
 
-							<details class="video-dropdown">
-								<summary>Show Video ▼</summary>
-								<video autoplay loop muted playsinline>
-									<source src="videos/EmptyVideo.mp4" type="video/mp4">
-								</video>
-							</details>
+							<div class="mainInfo">
+								<h2>Enemy AI</h2>
+								<p>I developed enemy AI using Unreal Engine’s Behaviour Tree system, gaining hands-on experience with it for the first time.</p>
 
-							<details class="text-dropdown">
-								<summary>Show Extra Details ▼</summary>
-								<p> Extra details...</p>
-							</details>
+								<details class="video-dropdown">
+									<summary>Show Video "Thrall Navigation" ▼</summary>
+									<video autoplay loop muted playsinline>
+										<source src="videos/AbyssalDread/ThrallNavigation1080.mp4" type="video/mp4">
+									</video>
+								</details>
+								<details class="video-dropdown">
+									<summary>Show Video "Yeeter Attack" ▼</summary>
+									<video autoplay loop muted playsinline>
+										<source src="videos/AbyssalDread/YeeterAttack1080.mp4" type="video/mp4">
+									</video>
+								</details>
+								<details class="video-dropdown">
+									<summary>Show Video "Yeeter Maintaining Distance" ▼</summary>
+									<video autoplay loop muted playsinline>
+										<source src="videos/AbyssalDread/YeeterMaintainDistance1080.mp4" type="video/mp4">
+									</video>
+								</details>
+								<details class="video-dropdown">
+									<summary>Show Video "Dog Attack/Charge" ▼</summary>
+									<video autoplay loop muted playsinline>
+										<source src="videos/AbyssalDread/DogAttack1080.mp4" type="video/mp4">
+									</video>
+								</details>
 
-							<h2>Crystal Boss</h2>
-							<p>In the final stage of the game, there was a scrystal boss which I ahd worked on. This required the players to charge up the crystal by staying within the set area until the crystal subermeged intself into the ground. </p>
+								<details class="text-dropdown">
+									<summary>Show Extra Details ▼</summary>
+									<p>I developed three distinct enemy behaviour types: close-range attackers (Thralls and Tanks), ranged evaders (Yeeters), and aggressive chargers/jumpers (Skullcrabs and Dogs).</p>
+								</details>
+							</div>
 
-							<details class="video-dropdown">
-								<summary>Show Video "Crystal Begin Charging" ▼</summary>
-								<video autoplay loop muted playsinline>
-									<source src="videos/AbyssalDread/BeginCharging1080.mp4" type="video/mp4">
-								</video>
-							</details>
+							<div class="mainInfo">
+								<h2>Enemy Dismemberment System</h2>
+								<p>I implemented a straightforward dismemberment system that assigned individual health values to each enemy limb. When an enemy was hit, damage was applied to a random limb, and if its health reached zero, the limb would be removed and replaced with a corresponding dismembered version at the same location.</p>
 
-							<details class="video-dropdown">
-								<summary>Show Video "Difficulty Increase" ▼</summary>
-								<video autoplay loop muted playsinline>
-									<source src="videos/AbyssalDread/HalfwayMadness1080.mp4" type="video/mp4">
-								</video>
-							</details>
+								<details class="video-dropdown">
+									<summary>Show Video "Thrall Dismemberment" ▼</summary>
+									<video autoplay loop muted playsinline>
+										<source src="videos/AbyssalDread/ThrallDismember1080.mp4" type="video/mp4">
+									</video>
+								</details>
 
-							<details class="video-dropdown">
-								<summary>Show Video "Crystal Boss Fight Ending" ▼</summary>
-								<video autoplay loop muted playsinline>
-									<source src="videos/AbyssalDread/CrystalEnd1080.mp4" type="video/mp4">
-								</video>
-							</details>
+								<details class="text-dropdown">
+									<summary>Show Extra Details ▼</summary>
+									<p> Further details... </p>
+								</details>
+							</div>
 
-							<details class="text-dropdown">
-								<summary>Show Extra Details ▼</summary>
-								<p> Extra details...</p>
-							</details>
+							<div class="mainInfo">
+								<h2>Audio Scripting</h2>
+								<p>I developed the audio scripting using Unreal Engine’s audio systems, creating a dynamic system that seamlessly transitions between combat and ambient music based on gameplay context. Additionally, I implemented the trigger system for weapon voice lines to enhance immersion and player feedback.</p>
 
+								<details class="video-dropdown">
+									<summary>Show Video ▼</summary>
+									<video autoplay loop muted playsinline>
+										<source src="videos/EmptyVideo.mp4" type="video/mp4">
+									</video>
+								</details>
+
+								<details class="text-dropdown">
+									<summary>Show Extra Details ▼</summary>
+									<p> Extra details...</p>
+								</details>
+							</div>
+
+							<div class="mainInfo">
+								<h2>Level Transition</h2>
+								<p>Details about the system...</p>
+
+								<details class="video-dropdown">
+									<summary>Show Video ▼</summary>
+									<video autoplay loop muted playsinline>
+										<source src="videos/EmptyVideo.mp4" type="video/mp4">
+									</video>
+								</details>
+
+								<details class="text-dropdown">
+									<summary>Show Extra Details ▼</summary>
+									<p> Extra details...</p>
+								</details>
+							</div>
 						</div>
 					</div>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="https://formspree.io/f/mnnpbyzd">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
+						<!-- Footer -->
+						<footer id="footer">
+							<div class="inner">
+								<section>
+									<h2>Get in touch</h2>
+									<form method="post" action="https://formspree.io/f/mnnpbyzd">
+										<div class="fields">
+											<div class="field half">
+												<input type="text" name="name" id="name" placeholder="Name" />
+											</div>
+											<div class="field half">
+												<input type="email" name="email" id="email" placeholder="Email" />
+											</div>
+											<div class="field">
+												<textarea name="message" id="message" placeholder="Message"></textarea>
+											</div>
 										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
+										<ul class="actions">
+											<li><input type="submit" value="Send" class="primary" /></li>
+										</ul>
+									</form>
+								</section>
+								<section>
+									<h2>Follow</h2>
+									<ul class="icons">
+										<li><a href="https://github.com/Lewapp" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://lewapp.itch.io/" class="icon brands style2 fa-itch-io"><span class="label">Itch.io</span></a></li>
+										<li><a href="https://www.linkedin.com/in/lewis-mitchell-9a0a401bb/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="mailto:JMitchellLewis@outlook.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 									</ul>
-								</form>
-							</section>
-							<section>
-								<h2>Follow</h2>
-								<ul class="icons">
-									<li><a href="https://github.com/Lewapp" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://lewapp.itch.io/" class="icon brands style2 fa-itch-io"><span class="label">Itch.io</span></a></li>
-									<li><a href="https://www.linkedin.com/in/lewis-mitchell-9a0a401bb/" class="icon brands style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="mailto:JMitchellLewis@outlook.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+								</section>
+								<ul class="copyright">
+									<li>&copy; Untitled. All rights reserved</li>
+									<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 								</ul>
-							</section>
-							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
-
+							</div>
+						</footer>
 			</div>
 
 		<!-- Scripts -->
