All abyssal dread videos added
All videos added for the abyssal dread page. Now need to include further details

--- a/AbyssalDread.html
+++ b/AbyssalDread.html
@@ -226,6 +226,12 @@
 										<source src="videos/AbyssalDread/DogAttack1080.mp4" type="video/mp4">
 									</video>
 								</details>
+								<details class="video-dropdown">
+									<summary>Show Video "Crab Attack/Jump" ▼</summary>
+									<video autoplay loop muted playsinline>
+										<source src="videos/AbyssalDread/CrabAttack&Death1080.mp4" type="video/mp4">
+									</video>
+								</details>
 
 								<details class="text-dropdown">
 									<summary>Show Extra Details ▼</summary>
@@ -243,6 +249,12 @@
 										<source src="videos/AbyssalDread/ThrallDismember1080.mp4" type="video/mp4">
 									</video>
 								</details>
+								<details class="video-dropdown">
+									<summary>Show Video "Yeeter Dismemberment" ▼</summary>
+									<video autoplay loop muted playsinline>
+										<source src="videos/AbyssalDread/YeeterDismember1080.mp4" type="video/mp4">
+									</video>
+								</details>
 
 								<details class="text-dropdown">
 									<summary>Show Extra Details ▼</summary>
@@ -251,13 +263,13 @@
 							</div>
 
 							<div class="mainInfo">
-								<h2>Audio Scripting</h2>
-								<p>I developed the audio scripting using Unreal Engine’s audio systems, creating a dynamic system that seamlessly transitions between combat and ambient music based on gameplay context. Additionally, I implemented the trigger system for weapon voice lines to enhance immersion and player feedback.</p>
+								<h2>Level Transition</h2>
+								<p>Details about the system...</p>
 
 								<details class="video-dropdown">
-									<summary>Show Video ▼</summary>
+									<summary>Show Video "Scoreboard Transition"▼</summary>
 									<video autoplay loop muted playsinline>
-										<source src="videos/EmptyVideo.mp4" type="video/mp4">
+										<source src="videos/AbyssalDread/LevelTransition1080.mp4" type="video/mp4">
 									</video>
 								</details>
 
@@ -268,15 +280,8 @@
 							</div>
 
 							<div class="mainInfo">
-								<h2>Level Transition</h2>
-								<p>Details about the system...</p>
-
-								<details class="video-dropdown">
-									<summary>Show Video ▼</summary>
-									<video autoplay loop muted playsinline>
-										<source src="videos/EmptyVideo.mp4" type="video/mp4">
-									</video>
-								</details>
+								<h2>Audio Scripting</h2>
+								<p>I developed the audio scripting using Unreal Engine’s audio systems, creating a dynamic system that seamlessly transitions between combat and ambient music based on gameplay context. Additionally, I implemented the trigger system for weapon voice lines to enhance immersion and player feedback.</p>
 
 								<details class="text-dropdown">
 									<summary>Show Extra Details ▼</summary>
